# nicar2026

./: .classify_state.json  .extract_state.json  DEMO.md  LICENSE  README.md  chicago_local_gov_guide.md  classified_articles.json  classify.py  extract.py  extracted_articles.json  guide.py  pyproject.toml  utils.py
chicago-public-media/: classified_articles_test.json  extract.py  extracted_articles_test.json
data/analysis_documents/: budget_analysis.md
early_versions/: 1_education_beatbook_draft_v1.md  2_comprehensive_education_beatbook.md  3_beatbook_v2_enhanced.md
scripts/: MSDE_DATA_COLLECTION_GUIDE.md  absenteeism_student_groups.py  analyze_2025_issues.py  analyze_beatbook_relevance.py  analyze_county_issues.py  analyze_issues.py  analyze_quote_relevance.py  beatbook_tagging.py  check_missing_stories.py  clean_entities_for_beatbook.py  clean_municipality_data.py  create_budget_data.py  create_municipal_officials.sh  demographics.py  download_and_parse_minutes.py  education_script_v2.py  extract_officials.py  extract_quotes.py  extract_school_data.py  fetch_budget_data.py  fetch_census_data.py  fetch_enhanced_census_data.py  fetch_msde_student_data.py  fetch_municipality_census.py  fetch_schools_historical.py  filter_by_recency.py  filter_by_top_issues.py  filter_geography.py  filter_recent.py  filter_relevant_quotes.py  find_budget_pages.py  find_local_gov_stories.py  fix_filenames.py  fix_kent_county.py  fix_missing_entities.py  fix_remaining_entities.py  generate_beatbook.py  generate_beatbook_llm.py  generate_beatbook_profiles.py  generate_county_beatbooks.py  (+35 more)
